Cria menu e menu item
