# app/models/product.rb
@@ -1,6 +1,7 @@
 class Product < ApplicationRecord
   belongs_to :category
   has_one :recipe, dependent: :restrict_with_exception
+  has_many :menu_items, dependent: :restrict_with_exception
 
   has_one_attached :image
 
